--- a/salame.css
+++ b/salame.css
@@ -12,13 +12,24 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
-a{
-    
+.botao a {
     color: #000000;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 20px;
+    width: 100px;
+    text-align: center;
+
+}
+.carrinho {
+    text-align: end;
+    
 }
 
-.menu li a {
+
+
+
+.menu li {
     display: block;
     margin-left: 10px;
 }
