--- a/salame.css
+++ b/salame.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
+
 header {
     display: flex;
    background-color:#f3e9df ; 
@@ -13,6 +14,8 @@ header {
     justify-content: space-between;
 }
 .botao a {
+    font-family: cursive;
+    text-decoration: none;
     color: #000000;
     border-radius: 8px;
     margin: 10px;
@@ -23,11 +26,8 @@ header {
 }
 .carrinho {
     text-align: end;
-    
+
 }
-
-
-
 
 .menu li {
     display: block;
@@ -37,7 +37,6 @@ header {
 footer {
     position: relative;
     bottom: 0;
-    width: 100%;
     background-color:#f3e9df ; 
     padding: 20px;
     display: flex;
