--- a/salame.css
+++ b/salame.css
@@ -65,8 +65,8 @@ li {
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+    /* max-width: 100%;
+    height: auto; */
     border-radius: 8px;
     margin-bottom: 10px;
 }
