--- a/style.css
+++ b/style.css
@@ -90,6 +90,16 @@ footer {
     justify-content: center;  
 }
 
+.footer2 {
+    position: relative;
+    bottom: 0;
+    background-color: #f3e9df;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;  
+}
+
 .menu {
     display: flex;
 }
@@ -187,7 +197,23 @@ img {
     margin: 10px 10px;
 }
 
+.quemsomos h1{
+
+    vertical-align: baseline;
+    text-align: center;
+    margin: 100px;
+    
+}
 
 
 
 
+.link{
+    border: 1px solid;
+    background-color: #ccc;
+    text-align: center;
+}
+
+.link:hover{
+    background-color: #b81818;
+}
