--- a/style.css
+++ b/style.css
@@ -216,12 +216,15 @@ img {
 }
 
 .link p{
-    
-   
    
     text-align: center;
 }
 
 .link:hover{
     background-color: #b81818;
+}
+
+
+.quemsomos p{
+text-align: left;
 }
