--- a/style.css
+++ b/style.css
@@ -225,6 +225,18 @@ img {
 }
 
 
-.quemsomos p{
-text-align: left;
-}
+.coluna2 {
+    
+    max-width: 500px;
+    margin: 30px;
+    column-count: 1;
+    column-gap: 0;
+    
+  }
+  .conteudo-coluna-2 {
+    display: flex;
+    max-width: 100%;
+    margin: 10px;
+    column-count: 1;
+    column-gap: 0;
+  }
