--- a/style.css
+++ b/style.css
@@ -320,6 +320,14 @@ img {
     margin-left: auto;
     margin-right: auto;
   }
-  
+
+  h1{
+    font-size: 1em;
+    margin-top: 10px;
+  }
+.flex{
+  padding: 20px;
+  flex-wrap: wrap-reverse;
+}
 
 }
