--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ img {
 
 .flex {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     max-width: 800px;
     margin: 0 auto;
 }
